Bug 1581589 - Return null in GetAccessibleOrContainer for text leafs of unrendered maps. r?Jamie! a=lizzard

Differential Revision: https://phabricator.services.mozilla.com//D47185

--HG--
extra : histedit_source : 55246d7ba00207e9eeda42b42444d5b1147b5584